Allow UnhandledKeyboardEventHandler get NSWindow from FocusManager.

[MacViewsBrowser] Fix Broken WebViewInteractiveTest.EditCommands/0.
[Reason] After "GetLastKeyboardEvent API from InputRouter" refactoring:
https://chromium-review.googlesource.com/c/chromium/src/+/577950
NSEvent lost NSWindow, and it can not be more handled by
UnhandledKeyboardEventHandler without it.

R=dcheng@chromium.org, miu@chromium.org

Bug: 770547
Change-Id: Ic071706009cfe6f666fce7b1ba22977f70a1ee92