ui/views/controls/webview/unhandled_keyboard_event_handler_mac.mm
@@ -6,6 +6,8 @@
 
 #import "base/mac/foundation_util.h"
 #import "ui/views/cocoa/native_widget_mac_nswindow.h"
+#include "ui/views/view.h"
+#include "ui/views/widget/widget.h"
 
 namespace views {
 
@@ -13,7 +15,15 @@ namespace views {
 void UnhandledKeyboardEventHandler::HandleNativeKeyboardEvent(
     gfx::NativeEvent event,
     FocusManager* focus_manager) {
-  [base::mac::ObjCCastStrict<NativeWidgetMacNSWindow>([event window])
+  NSWindow* window = [event window];
+  if (!window) {
+    View* focused_view =
+        focus_manager ? focus_manager->GetFocusedView() : nullptr;
+    if (focused_view) {
+      window = [focused_view->GetWidget()->GetNativeView() window];
+    }
+  }
+  [base::mac::ObjCCastStrict<NativeWidgetMacNSWindow>(window)
       redispatchKeyEvent:event];
 }
 
